// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> props button-as 1`] = `
<span
  className="ek-button"
/>
`;

exports[`<Button /> props className 1`] = `
<button
  className="ek-button ololo"
/>
`;

exports[`<Button /> render 1`] = `
<button
  className="ek-button"
/>
`;
